# llm-dev-kit

./: .dockerignore  .env.example  .env.production  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  README.prod.md  docker-compose.prod.yml  docker-compose.yml  mcp.json  ollama_fastapi.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample.env
agent-service/: Dockerfile  main.py  requirements.txt
app/: api.py  cache.py  config.py  interfaces.py  main.py  mcp_server.py  models.py  ollama_client.py  prompts.py  rag.py  vector_store.py
app/api/: __init__.py  github_webhook.py
app/cache/: __init__.py  redis.py
app/github/: client.py
app/kafka/: consumer.py  producer.py  topics.py
app/models/: __init__.py  events.py
app/retrievers/: github.py  hybrid.py  vector.py
app/services/: __init__.py  cache.py  embedding_service.py  ollama_client.py  rag.py  vector_store.py
app/vectorstore/: __init__.py  qdrant.py
app/workers/: delete_worker.py  embedding_worker.py
backend/: Dockerfile  main.py  requirements.txt
docs/: github-doc-sync.md  setup.md
frontend/: package-lock.json
frontend/src/: App.jsx
nginx/: nginx.conf
services/devkit_common/: config.py  github_client.py  interfaces.py  kafka_bus.py  models.py  qdrant_store.py  redis_cache.py
services/embedding_worker/: chunking.py  main.py  requirements.txt
services/llm_service/: main.py  requirements.txt
services/mcp_service/: main.py  requirements.txt
services/rag_service/: cache.py  chat.py  chroma_store.py  llm_client.py  main.py  openai_api.py  pdf.py  prompts.py  requirements.txt  retrieval.py
services/webhook_service/: main.py  (+1 more)
tests/: test_cache.py  test_cache_key.py  test_chat_pipeline.py  test_embedding_worker.py  test_github_webhook.py  test_llm_router.py  test_pdf_chunking.py  test_prompts.py  test_rag.py
(+5 files in other folders)
