[project]
name = "llm-dev-kit"
version = "0.1.0"
description = "Local-first LLM development kit with chat, RAG, API, Docker, and MCP support."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb",
    "fastapi",
    "mcp",
    "pydantic-settings",
    "pypdf",
    "python-multipart",
    "redis",
    "requests",
    "streamlit",
    "uvicorn[standard]",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
