[project]
name = "llm-dev-kit"
version = "0.2.0"
description = "Local-first microservices LLM development kit: offline Ollama plus optional cloud providers, RAG, Kafka doc sync, Open WebUI frontend, and an Nginx load balancer."
readme = "README.md"
requires-python = ">=3.12"
# Runtime dependencies are per-service: see services/*/requirements.txt
dependencies = []

[project.optional-dependencies]
dev = [
    "fastapi",
    "httpx",
    "pydantic-settings",
    "pypdf",
    "pytest",
    "python-multipart",
    "redis",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["services", "."]
